Follow up to r1720129 and r1723295: CHANGES entry.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1733088 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_ssl: Fix possibly leaking custom [EC]DH params on restart.
+     [Jan Kaluza, Yann Ylavic]
+
   *) prefork: Initialize the POD when running in ONE_PROCESS (or -X) mode to
      avoid a crash.  [Jan Kaluza, Yann Ylavic]
 
