--- a/docs/manual/style/lang/fr.xml
+++ b/docs/manual/style/lang/fr.xml
@@ -149,12 +149,18 @@
 	n'a pas encore &eacute;t&eacute; traduite. Veuillez vous reporter &agrave; la version
 	en langue anglaise.</message>
 
-        <!-- retirement (needs translation) -->
-        <message id="retired.headline">Please note</message>
+        <!-- retirement -->
+        <message id="retired.headline">A savoir</message>
         <message id="retired.description">
-            <p> This document refers to a legacy release (<strong>2.2</strong>) of Apache httpd. The active release (<strong>2.4</strong>) is documented <a href="http://httpd.apache.org/docs/current">here</a>. If you have not already upgraded, please follow <a href="http://httpd.apache.org/docs/current/upgrading.html">this link</a> for more information.</p>
+            <p>Ce document concerne une version ancienne (<strong>2.2</strong>)
+	    du serveur HTTP Apache. La version actuelle est document&eacute;e <a
+	    href="http://httpd.apache.org/docs/current">ici</a>. Si vous n'avez
+	    pas encore effectu&eacute; la mise &agrave; jour, veuillez suivre <a
+	    href="http://httpd.apache.org/docs/current/upgrading.html">ce
+	    lien</a> pour plus d'informations.</p>
         </message>
-        <message id="retired.document">You may follow <link>this link</link> to go to the current version of this document.</message>
+        <message id="retired.document">Pour consulter la version actuelle de ce
+	document, vous pouvez suivre <link>ce lien</link>.</message>
 
     </messages>
 </language>
