--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_rewrite: Add QSL|qslast flag to allow rewrites to files with 
+     literal question marks in their names. PR 58777. [Eric Covener]
+
   *) core: Split ap_create_request() from ap_read_request(). [Graham Leggett]
 
   *) mod_ssl: Don't lose track of the SSL context if the ssl_run_pre_handshake()
