mod_include now sets DOCUMENT_ARGS.
* Like DOCUMENT_URI, this is for the SSI document, not for any
  subrequest called for the include directive.
* Like QUERY_STRING, this is just r->args (or empty string if there are
  none), unlike QUERY_STRING_UNESCAPED.

The name of the variable is taken from the Zeus SSI implementation.


git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1734817 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_include: Add variable DOCUMENT_ARGS, with the arguments to the
+     request for the SSI document.  [Jeff Trawick]
+
   *) core: Extend support for setting aside data from the network input filter
      to any connection or request input filter. [Graham Leggett]
 
