mod_http: Make sure HTTP filters are added on HTTP requests only.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1735176 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_http: Make sure HTTP filters are added on HTTP requests only.
+     [Graham Leggett]
+
   *) mpm: Generalise the ap_mpm_register_socket functions to accept pipes
      or sockets. [Graham Leggett]
 
