Follow up to r1734396: CHANGES entry. Since ssl_run_pre_handshake() is not (yet) in 2.4.x, mention ssl_init_ssl_connection() instead.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.4.x@1735650 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -19,8 +19,8 @@
      no streams are open and even if only after 1 sec delay. Under load, event
      mpm discards connections otherwise too quickly. [Stefan Eissing]
   
-  *) mod_ssl: Don't lose track of the SSL context if the ssl_run_pre_handshake()
-     hook returns an error. [Graham Leggett]
+  *) mod_ssl: Don't lose track of the SSL context if an unlikely failure occurs
+     in ssl_init_ssl_connection().  [Graham Leggett]
 
   *) mod_rewrite: Add QSL|qslast flag to allow rewrites to files with
      literal question marks in their names. PR 58777. [Eric Covener]
