adding change description fro mod_http2
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.4.x@1735927 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -4,8 +4,10 @@
      several stages of initialization and connection handling.  See
      mod_ssl_openssl.h.  [Jeff Trawick]
 
-  *) mod_http2: disabling PUSH when client sends GOAWAY.
-  
+  *) mod_http2: disabling PUSH when client sends GOAWAY. Slave connections are 
+     reused for several requests, improved performance and better memory use. 
+     [Stefan Eissing]  
+     
   *) mod_rewrite: Don't implicitly URL-escape the original query string
      when no substitution has changed it (like PR50447 but server context)
      [Evgeny Kotkov <evgeny.kotkov visualsvn.com>]
