Add CHANGES entry for r1736157.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.4.x@1736312 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,8 @@
 
 Changes with Apache 2.4.20
 
+  *) mod_http2: Fix build on Windows from dsp files.
+     [Stefan Eissing] 
 
 Changes with Apache 2.4.19
 
