mod_http2: fix for scoreboard updates missing, mem leak fix for slave connections
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1736463 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_http2: fix for missing score board updates on request count, fix for
+     memory leak on slave connection reuse.
+     
   *) mod_http2: disabling PUSH when client sends GOAWAY.
   
   *) mod_proxy_http2: using HTTP/2 flow control for backend streams by 
