mod_http2: new vars, keepalive increase, no slave reuse when con->keepalive not set properly
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1737125 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,12 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_http2: incrementing keepalives on each request started so that logging
+     %k gives increasing numbers per master http2 connection. 
+     New documented variables in env, usable in custom log formats: H2_PUSH,
+     H2_PUSHED, H2_PUSHED_ON, H2_STREAM_ID and H2_STREAM_TAG.
+     [Stefan Eissing]
+
   *) core: Do not read .htaccess if AllowOverride and AllowOverrideList 
      are "None". PR 58528.
      [Michael Schlenker <msc contact.de, Rudiger Plum, Daniel Ruggeri]
