* Dreaded Umlauts :-). Use the usual transcription for those to be consistent   with other entries in the file.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1737148 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -9,18 +9,18 @@ Changes with Apache 2.5.0
 
   *) core: Do not read .htaccess if AllowOverride and AllowOverrideList 
      are "None". PR 58528.
-     [Michael Schlenker <msc contact.de, Rudiger Plum, Daniel Ruggeri]
+     [Michael Schlenker <msc contact.de, Ruediger Pluem, Daniel Ruggeri]
 
   *) mod_proxy_express: Fix possible use of DB handle after close.  PR 59230.
      [Petr <pgajdos suse.cz>]
-     
+
   *) mod_http2: more efficient passing of response bodies with less contention
-     and file bucket forwarding. [Stefan Eissing] 
-     
+     and file bucket forwarding. [Stefan Eissing]
+
   *) mod_proxy_http2: using HTTP/2 flow control for backend streams by 
      observing data actually send out on the frontend h2 connection. 
      [Stefan Eissing]
-     
+
   *) mpm: Generalise the ap_mpm_register_socket functions to accept pipes
      or sockets. [Graham Leggett]
 
