And we are 2.4.21-dev
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.4.x@1737701 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
                                                          -*- coding: utf-8 -*-
 
+Changes with Apache 2.4.21
+
+
 Changes with Apache 2.4.20
 
   *) core: Do not read .htaccess if AllowOverride and AllowOverrideList
