Document incompatible API change which happened in 2.4.7. The change affects third party modules using the mod_proxy shared memory structure proxy_worker_shared. Examples are third party balancer lbmethod modules.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.4.x@1738184 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1350,8 +1350,10 @@ Changes with Apache 2.4.7
      (not overridable via SSLCipherSuite). [Kaspar Brand]
 
   *) mod_proxy: Added support for unix domain sockets as the
-     backend server endpoint [Jim Jagielski, Blaise Tarr
-     <blaise tarr gmail com>]
+     backend server endpoint. This also introduces an unintended
+     incompatibility for third party modules using the mod_proxy
+     proxy_worker_shared structure, especially for balancer lbmethod
+     modules. [Jim Jagielski, Blaise Tarr <blaise tarr gmail com>]
 
   *) Add experimental cmake-based build system for Windows.  [Jeff Trawick,
      Tom Donovan]
