Don't take over scoreboard slots from gracefully finishing threads
Otherwise the old and the new thread will both update the same scoreboard slot
with undefined results.



git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1738631 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mpm_event: Don't take over scoreboard slots from gracefully finishing
+     threads. [Stefan Fritsch]
+
   *) mod_status: Display the process slot number in the async connection
      overview. [Stefan Fritsch]
 
