--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_proxy_ajp: Add "secret" parameter to proxy workers to implement legacy
+     AJP13 authentication.  PR 53098.  [Dmitry A. Bakshaev <dab1818 gmail com>]
+
   *) mpm_event: Don't take over scoreboard slots from gracefully finishing
      threads. [Stefan Fritsch]
 
