--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
-  *) scoreboard/status: Keep previous worker connection/request data when idle as
-     prior to 2.4.20.  [Yann Ylavic]
+  *) scoreboard/status: Keep workers' previous Client, VHost and Request values
+     when idle, like in 2.4.18 and earlier.  [Yann Ylavic]
 
   *) mod_proxy_ajp: Add "secret" parameter to proxy workers to implement legacy
      AJP13 authentication.  PR 53098.  [Dmitry A. Bakshaev <dab1818 gmail com>]
