http: Respond with "408 Request Timeout" when a timeout occurs while reading the request body.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1739201 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) http: Respond with "408 Request Timeout" when a timeout occurs while
+     reading the request body.  [Yann Ylavic]
+
   *) scoreboard/status: Keep workers' previous Client, VHost and Request values
      when idle, like in 2.4.18 and earlier.  [Yann Ylavic]
 
