suppress h2 in upgrade header
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1740075 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) core: explicitly exclude 'h2' from protocols announced via an Upgrade: 
+     header as commanded by http-wg.
+     
   *) mod_http2: disabling mmap for file buckets transport due to segmenation
      faults when files change on the fly.
      
