Add a new panel to all the module doc pages containing quicklinks for Changelog and open bugs.
This change should help users not familiar with the httpd changelog and bugzilla to check them
before asking in IRC/users@/etc if httpd has a bug or not. The wording and position of the 
panel can of course be changed; this is a proposal to improve user experience while consulting 
doc pages related to httpd modules. The change has also been discussed in docs@.



git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1740110 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/manual/style/lang/da.xml
+++ b/docs/manual/style/lang/da.xml
@@ -72,6 +72,9 @@
         <message id="uppercase">ABCDEFGHIJKLMNOPQRSTUVWXYZ∆ÿ≈</message>
         <message id="name-section">NAVN</message>
         <message id="hyphenation"></message>
+        <message id="foundabug">Bugfix checklist:</message>
+        <message id="httpdchangelog">Httpd changelog</message>
+        <message id="httpdopenbugs">Open bugs</message>
 
         <!-- Used in description box for directives -->
         <message id="syntax">Syntaks</message>
