--- a/docs/manual/style/lang/ru.xml
+++ b/docs/manual/style/lang/ru.xml
@@ -70,6 +70,9 @@
         <message id="uppercase">ABCDEFGHIJKLMNOPQRSTUVWXYZ</message>
         <message id="name-section">NAME</message>
         <message id="hyphenation"></message>
+        <message id="foundabug">Bugfix checklist:</message>
+        <message id="httpdchangelog">Httpd changelog</message>
+        <message id="httpdopenbugs">Open bugs</message>
 
         <!-- Used in description box for directives -->
         <message id="syntax">Синтаксис</message>
