--- a/docs/manual/style/lang/zh-cn.xml
+++ b/docs/manual/style/lang/zh-cn.xml
@@ -69,6 +69,9 @@
         <message id="uppercase">ABCDEFGHIJKLMNOPQRSTUVWXYZ</message>
         <message id="name-section">名称</message>
         <message id="hyphenation"></message>
+        <message id="foundabug">Bugfix checklist:</message>
+        <message id="httpdchangelog">Httpd changelog</message>
+        <message id="httpdopenbugs">Open bugs</message>
 
         <!-- Used in description box for directives -->
         <message id="syntax">语法</message>
