--- a/docs/manual/style/lang/pt-br.xml
+++ b/docs/manual/style/lang/pt-br.xml
@@ -70,6 +70,9 @@
         <!-- Used in manualpage -->
         <message id="relatedmodules">M&#243;dulos Relacionados</message>
         <message id="relateddirectives">Diretrizes Relacionadas</message>
+        <message id="foundabug">Bugfix checklist:</message>
+        <message id="httpdchangelog">Httpd changelog</message>
+        <message id="httpdopenbugs">Open bugs</message>
 
         <!-- Used in description box for directives -->
         <message id="syntax">Sintaxe</message>
