Merge: r1740108, r1740084, r1739932 from trunk
mod_http2: disabling mmap on file buckets, changing r->protocol to HTTP/2.0


git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.4.x@1740112 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,13 @@
 
 Changes with Apache 2.4.21
 
-
+  *) mod_http2: r->protocol changed to "HTTP/2.0" (was "HTTP/2") as this will
+     give expected syntax in CGI's SERVER_PROTOCOL is more compatible with
+     existing major/minor handling. Fixes PR 59313.
+  
+  *) mod_http2: disabling mmap for file buckets transport due to segmenation
+     faults when files change on the fly.
+     
 Changes with Apache 2.4.20
 
   *) core: Do not read .htaccess if AllowOverride and AllowOverrideList
