--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,11 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_http2: eliminating h2_io instances for streams, reducing memory
+     pools and footprint. [Stefan Eissing]
+     
   *) core: explicitly exclude 'h2' from protocols announced via an Upgrade: 
-     header as commanded by http-wg.
+     header as commanded by http-wg. [Stefan Eissing]
      
   *) mod_http2: new "bucket beam" technology to transport buckets across
      threads without buffer copy. Delaying response start until flush or
