Second part of the new "Bugfix checklist" panel in the modules doc pages. Changes discussed in docs@ and implemented: - Moved Httpd to HTTPD - Created a new link to quickly open a bug in Bugzilla - Modified the link called "Open bugs" to "Known issues" and appended   the bugzilla component name to the URL. In this way the user will only   see bugs related to the module under review, not all the httpd ones.   A little hack was necessary since some mpms have inconsistent naming   (e.g. mpm_event in Bugzilla and event in docs).
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1740735 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/manual/style/lang/da.xml
+++ b/docs/manual/style/lang/da.xml
@@ -73,8 +73,9 @@
         <message id="name-section">NAVN</message>
         <message id="hyphenation"></message>
         <message id="foundabug">Bugfix checklist:</message>
-        <message id="httpdchangelog">Httpd changelog</message>
-        <message id="httpdopenbugs">Open bugs</message>
+        <message id="httpdchangelog">HTTPD changelog</message>
+        <message id="httpdknownissues">Known issues</message>
+        <message id="httpdreportabug">Report a bug</message>
 
         <!-- Used in description box for directives -->
         <message id="syntax">Syntaks</message>
