--- a/docs/manual/style/lang/es.xml
+++ b/docs/manual/style/lang/es.xml
@@ -70,8 +70,9 @@
         <message id="name-section">Nombre</message>
         <message id="hyphenation">Cesura</message>
         <message id="foundabug">Bugfix checklist:</message>
-        <message id="httpdchangelog">Httpd changelog</message>
-        <message id="httpdopenbugs">Open bugs</message>
+        <message id="httpdchangelog">HTTPD changelog</message>
+        <message id="httpdknownissues">Known issues</message>
+        <message id="httpdreportabug">Report a bug</message>
 
         <!-- Used in description box for directives -->
         <message id="syntax">Sintaxis</message>
