--- a/docs/manual/style/lang/pt-br.xml
+++ b/docs/manual/style/lang/pt-br.xml
@@ -71,8 +71,9 @@
         <message id="relatedmodules">M&#243;dulos Relacionados</message>
         <message id="relateddirectives">Diretrizes Relacionadas</message>
         <message id="foundabug">Bugfix checklist:</message>
-        <message id="httpdchangelog">Httpd changelog</message>
-        <message id="httpdopenbugs">Open bugs</message>
+        <message id="httpdchangelog">HTTPD changelog</message>
+        <message id="httpdknownissues">Known issues</message>
+        <message id="httpdreportabug">Report a bug</message>
 
         <!-- Used in description box for directives -->
         <message id="syntax">Sintaxe</message>
