--- a/docs/manual/style/lang/tr.xml
+++ b/docs/manual/style/lang/tr.xml
@@ -74,8 +74,9 @@
         <message id="name-section">İSİM</message>
         <message id="hyphenation">.nh</message>
         <message id="foundabug">Bugfix checklist:</message>
-        <message id="httpdchangelog">Httpd changelog</message>
-        <message id="httpdopenbugs">Open bugs</message>
+        <message id="httpdchangelog">HTTPD changelog</message>
+        <message id="httpdknownissues">Known issues</message>
+        <message id="httpdreportabug">Report a bug</message>
 
         <!-- Used in description box for directives -->
         <message id="syntax">Sözdizimi</message>
