Follow up to r1740928: better CHANGES entry.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1740960 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,7 @@
 Changes with Apache 2.5.0
 
   *) mod_proxy, mod_ssl: Handle SSLProxy* directives in <Proxy> sections,
-     allowing different TLS configurations per backend.  [Yann Ylavic]
+     allowing per backend TLS configuration.  [Yann Ylavic]
 
   *) mod_http2: eliminating h2_io instances for streams, reducing memory
      pools and footprint. [Stefan Eissing]
