Follow up to r1740928, r1740987: fix 'proxy section'.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1740998 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/manual/style/lang/en.xml
+++ b/docs/manual/style/lang/en.xml
@@ -97,6 +97,7 @@
         <message id="virtualhost" letter="v">virtual host</message>
         <message id="directory" letter="d">directory</message>
         <message id="htaccess" letter="h">.htaccess</message>
+        <message id="proxy" letter="p">proxy section</message>
 
         <!-- Used for directive lists -->
         <message id="directives">Directives</message>
